--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-<meta name="google-site-verification" content="M2A3Tpbcl1P6IojsSz47_PDQAvmDMXQJT3hJVo_32o0" />
-
+<head>
+  <meta name="google-site-verification" content="M2A3Tpbcl1P6IojsSz47_PDQAvmDMXQJT3hJVo_32o0" />
+</head>
 <h1>hello!</h1>
