--- a/catlogging-web/src/main/webapp/ng/system/settings/general/main.html
+++ b/catlogging-web/src/main/webapp/ng/system/settings/general/main.html
@@ -133,7 +133,7 @@
 
 	<div class="row">
 		<div class="col-md-12">
-			<button type="button" class="btn btn-primary" ng-disabled="form.$invalid" ng-click="save(form)">save</button>
+			<button type="button" class="btn btn-primary" ng-disabled="form.$invalid" ng-click="save(form)"><text ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.form.save'">{{localeMessage}}</text></button>
 		</div>
 	</div>
 </form>
