--- a/catlogging-web/src/main/webapp/ng/sniffer/event/eventsList.html
+++ b/catlogging-web/src/main/webapp/ng/sniffer/event/eventsList.html
@@ -4,14 +4,14 @@
 		<span class="dropdown" uib-dropdown>
 			<button class="btn btn-xs" uib-dropdown-toggle><i class="glyphicon glyphicon-cog"></i> <span class="caret"></span></button>
 			<ul class="dropdown-menu">
-				<li><a href="{{contextPath}}/c/sniffers/{{sniffer.id}}/events"><i class="glyphicon glyphicon-bullhorn"></i> Events</a></li>
-				<li><a href="{{contextPath}}/c/sniffers/{{sniffer.id}}"><i class="glyphicon glyphicon-edit"></i> Edit</a></li>
-				<li><a href="{{contextPath}}/c/sniffers/{{sniffer.id}}/status"><i class="glyphicon glyphicon-play-circle"></i> Control</a></li>
+				<li><a ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.nav.events'" href="{{contextPath}}/c/sniffers/{{sniffer.id}}/events"><i class="glyphicon glyphicon-bullhorn"></i> {{localeMessage}}</a></li>
+				<li><a ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.form.edit'" href="{{contextPath}}/c/sniffers/{{sniffer.id}}"><i class="glyphicon glyphicon-edit"></i> {{localeMessage}}</a></li>
+				<li><a ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.form.control'" href="{{contextPath}}/c/sniffers/{{sniffer.id}}/status"><i class="glyphicon glyphicon-play-circle"></i> {{localeMessage}}</a></li>
 				<li class="divider"></li>
-				<li><a href ng-click="deleteAllEvents()"><i class="glyphicon glyphicon-trash"></i> Delete all events</a></li>
+				<li><a href ng-click="deleteAllEvents()"><i class="glyphicon glyphicon-trash"></i> <text ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.delete'">{{localeMessage}}</text> <text ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.all'">{{localeMessage}}</text> <text ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.nav.events'">{{localeMessage}}</text></a></li>
 				<li class="divider"></li>
-				<li ng-if="!sniffer.aspects.scheduleInfo.scheduled"><a href ng-click="deleteSniffer()"><i class="glyphicon glyphicon-trash"></i> Delete sniffer</a></li>
-				<li ng-if="sniffer.aspects.scheduleInfo.scheduled" class="disabled"><a href ><i class="glyphicon glyphicon-trash"></i> Delete sniffer</a></li>
+				<li ng-if="!sniffer.aspects.scheduleInfo.scheduled"><a href ng-click="deleteSniffer()"><i class="glyphicon glyphicon-trash"></i> <text ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.delete'">{{localeMessage}}</text> <text ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.sniffer'">{{localeMessage}}</text></a></li>
+				<li ng-if="sniffer.aspects.scheduleInfo.scheduled" class="disabled"><a href ><i class="glyphicon glyphicon-trash"></i> <text ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.delete'">{{localeMessage}}</text> <text ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.sniffer'">{{localeMessage}}</text></a></li>
 			</ul>
 		</span>
 		<sup>
@@ -19,7 +19,7 @@
 			<span class="label label-default" ng-if="!sniffer.aspects.scheduleInfo.scheduled">{{nls.off}}</span>
 		</sup>
 	</li>
-	<li class="active">Events</li>
+	<li ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.nav.events'" class="active">{{localeMessage}}</li>
 </ul>
 
 <div class="events" lsf-busy-container busy="state.busy">
