--- a/catlogging-web/src/main/webapp/ng/wizards/source/compoundLog.html
+++ b/catlogging-web/src/main/webapp/ng/wizards/source/compoundLog.html
@@ -98,43 +98,34 @@ catloggingNgApp.controllerProvider.register(
 </script>
 <div id="source-compound-wizard" ng-controller="CompoundSourceController">
 	<div lsf-alerts alerts="alerts"></div>
-	<div lsf-busy-container busy="busy">
-		<lsf-info-label label="Compounds log data from multiple logs into a continuous stream ordered by the timestamp" class="text-muted">
-			This source compounds in real-time multiple logs into one continuous stream of log entries
-			ordered by the internal timestamp field <code>lf_timestamp</code>. This enables correlation of logs from multiple sources by timestamp.
-			Typical use case are e.g.
-			<ul>
-				<li>Compounding of logs from all hosts of a cluster</li>
-				<li>Correlating of logs from different systems like web servers, application
-					servers, databases etc. to support efficient root cause analysis</li>
-			</ul>
-			Make sure the entries in the log files to combine are ordered my a timestamp value which is parsed and evaluated as a date 
-			field (e.g. using the timestamp filter). 
-		</lsf-info-label>
+	<div lsf-busy-container busy="busy" >
+        <lsf-info-label-key label-key="catlogging.common.compoundLogData.text.1" class="text-muted">
+            <p ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.compoundLogData.text.2'" ng-bind-html="sanitizeLocalMessage()"></p>
+		</lsf-info-label-key>
 
-		<label>Log instances to combine</label>
-		<a class="btn btn-link" ng-click="addInstance()">
-			<i class="glyphicon glyphicon-plus"></i> Add instance</a>
+		<label ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.compoundLogData'">{{localeMessage}}</label>
+		<a class="btn btn-link" ng-click="addInstance()" >
+			<i class="glyphicon glyphicon-plus"></i> <text ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.add'">{{localeMessage}}</text> <text ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.instance'">{{localeMessage}}</text></a>
 		<div ng-repeat="part in bean.parts">
 			<div class="row" ng-controller="CompoundSourcePartController">
 				<div class="col-md-6">
 					<lsf-form-group class="form-group required" field-name="part[{{$index}}].sourceId" field-path="parts[{{$index}}].sourceId" bind-errors="bindErrors">
-						<label for="part[{{$index}}].sourceId" class="form-label">Source:</label>
+						<label ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.source'" for="part[{{$index}}].sourceId" class="form-label">{{localeMessage}}:</label>
 						<select ng-model="part.sourceId" name="part[{{$index}}].sourceId" id="part[{{$index}}].sourceId"
 							required="required" ng-options="logSource.id as logSource.name for logSource in sources" class="form-control">
-							<option value="">- Please select -</option>
+							<option value="" ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.pleaseSelect'">{{localeMessage}}</option>
 						</select>
 					</lsf-form-group>
 				</div>
 				<div class="col-md-6">
 					<lsf-form-group class="form-group required" field-name="part[{{$index}}].logPath" field-path="pastLogsType" bind-errors="bindErrors">
-						<lsf-info-label label="Log:" for="part[{{$index}}].logPath">
-							Choose between compounding all logs from a source or only a dedicated one.
-						</lsf-info-label>
+						<lsf-info-label-key label-key="catlogging.common.log" label=":" for="part[{{$index}}].logPath">
+                            <p ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.compoundLogData.text.3'" ng-bind-html="sanitizeLocalMessage()"></p>
+						</lsf-info-label-key>
 						<div class="input-group">
 							<select ng-model="part.logPath" name="part[{{$index}}].logPath" id="part[{{$index}}].logPath"
 								ng-options="log.path as log.name for log in logs[part.sourceId]" class="form-control">
-								<option value="">- All -</option>
+								<option value="" ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.all'">- {{localeMessage}} -</option>
 							</select>
 							<div class="input-group-btn">
 								<button class="btn btn-default" type="button" ng-click="deleteInstance($index)"
