--- a/catlogging-web/src/main/webapp/ng/wizards/filter/util/localeTimeZoneFields.html
+++ b/catlogging-web/src/main/webapp/ng/wizards/filter/util/localeTimeZoneFields.html
@@ -33,24 +33,23 @@ catloggingNgApp.controllerProvider.register(
 	<div lsf-busy-container busy="busy">
 		<div class="col-md-3">
 			<lsf-form-group class="form-group" field-name="locale" field-path="locale" bind-errors="bindErrors">
-				<lsf-info-label label="Timestamp locale:" for="locale">
-					The locale whose date format symbols (e.g. month names) should be used during parsing the timestamp string.
-				</lsf-info-label>
+				<lsf-info-label-key label-key="catlogging.common.timestampLocale" label=":" for="locale">
+					<p ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.timestampLocale.text.1'" ng-bind-html="sanitizeLocalMessage()"></p>
+				</lsf-info-label-key>
 				<select ng-model="bean.locale" name="locale" id="locale"
 					ng-options="locale for locale in locales | orderBy : locale" class="form-control">
-					<option value="">- System default locale -</option>
+					<option value="" ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.defaultLocale'">{{localeMessage}}</option>
 				</select>
 			</lsf-form-group>
 		</div>
 		<div class="col-md-3">
 			<lsf-form-group class="form-group" field-name="timeZone" field-path="timeZone" bind-errors="bindErrors">
-				<lsf-info-label label="Time zone:" for="timeZone">
-					When no time zone information is present in the input timestamp string,
-					you should explictly set the time zone it’s meant to refer to.
-				</lsf-info-label>
+				<lsf-info-label-key label-key="catlogging.common.timestampLocale" label=":" for="timeZone">
+					<p ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.timeZone.text.1'" ng-bind-html="sanitizeLocalMessage()"></p>
+				</lsf-info-label-key>
 				<select ng-model="bean.timeZone" name="timeZone" id="timeZone"
 					ng-options="timezone for timezone in timezones | orderBy : timezone" class="form-control">
-					<option value="">- Derived from input string -</option>
+					<option value="" ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.deriveInput'">{{localeMessage}}</option>
 				</select>
 			</lsf-form-group>
 		</div>
