--- a/catlogging-web/src/main/webapp/ng/reports/dataBuilderEditor.html
+++ b/catlogging-web/src/main/webapp/ng/reports/dataBuilderEditor.html
@@ -60,6 +60,6 @@
 	</form>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="ok()" ng-disabled="dbForm.$invalid">OK</button>
-    <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+    <button class="btn btn-primary btn-sm" ng-click="ok()" ng-disabled="dbForm.$invalid">OK</button>
+    <button class="btn btn-warning btn-sm" ng-click="cancel()">Cancel</button>
 </div>
