--- a/catlogging-web/src/main/webapp/ng/sniffer/snifferTest.html
+++ b/catlogging-web/src/main/webapp/ng/sniffer/snifferTest.html
@@ -42,6 +42,6 @@
     </uib-tabset>
 </div>
 <div class="modal-footer">
-	<span ng-if="publisher"><button class="btn btn-primary" ng-click="publish()" ng-disabled="!event || publishing"><i class="glyphicon glyphicon-bullhorn"></i> Test publishing event</button></span>
-	<button class="btn" ng-click="close()">Close</button>
+	<span ng-if="publisher"><button class="btn btn-primary btn-sm" ng-click="publish()" ng-disabled="!event || publishing"><i class="glyphicon glyphicon-bullhorn"></i> Test publishing event</button></span>
+	<button class="btn btn-default btn-sm" ng-click="close()">Close</button>
 </div>
