--- a/catlogging-web/src/main/webapp/ng/sniffer/statusRepositionZoomBottmBar.html
+++ b/catlogging-web/src/main/webapp/ng/sniffer/statusRepositionZoomBottmBar.html
@@ -11,10 +11,10 @@ catloggingNgApp.controllerProvider.register(
 ]);
 </script>
 <span ng-controller="SnifferStatusSetPositionController">
-	<button class="btn btn-default" ng-click="setPosition(true);close()"
+	<button class="btn btn-default btn-sm" ng-click="setPosition(true);close()"
 		title="Set position before this log entry to start sniffing">
 			<i class="glyphicon glyphicon-hand-left"></i> set position before</button>
-	<button class="btn btn-default" ng-click="setPosition(false);close()"
+	<button class="btn btn-default btn-sm" ng-click="setPosition(false);close()"
 		title="Set position after this log entry to start sniffing">
 			<i class="glyphicon glyphicon-hand-right"></i> set position after</button>
 </span>
