--- a/catlogging-web/src/main/webapp/ng/source/readerTest.html
+++ b/catlogging-web/src/main/webapp/ng/source/readerTest.html
@@ -20,5 +20,5 @@
 	</lsf-busy-container>
 </div>
 <div class="modal-footer">
-	<button class="btn" ng-click="close()">Close</button>
+	<button class="btn btn-default btn-sm" ng-click="close()">Close</button>
 </div>
