--- a/catlogging-web/src/main/webapp/ng/wizards/filter/severityMapping.html
+++ b/catlogging-web/src/main/webapp/ng/wizards/filter/severityMapping.html
@@ -113,7 +113,7 @@
 					<td>
 						<input type="text" ng-model="lw.value.n" required="required" class="form-control" placeholder="Name">
 					</td>
-					<td><button class="btn btn-default" type="button" ng-click="deleteLevel($index)"><i class="glyphicon glyphicon-trash"></i></button></td>
+					<td><button class="btn btn-default btn-sm" type="button" ng-click="deleteLevel($index)"><i class="glyphicon glyphicon-trash"></i></button></td>
 				</tr>
 				<tfoot>
 					<tr>
