--- a/catlogging-web/src/main/webapp/ng/wizards/publisher/httpPublisher.html
+++ b/catlogging-web/src/main/webapp/ng/wizards/publisher/httpPublisher.html
@@ -76,7 +76,7 @@
 					<div class="input-group">
 						<input type="text" ng-model="h.value" required="required" class="form-control" placeholder="Value">
 						<div class="input-group-btn">
-							<button class="btn btn-default" type="button" ng-click="deleteHeader($index)"><i class="glyphicon glyphicon-trash"></i></button>
+							<button class="btn btn-default btn-sm" type="button" ng-click="deleteHeader($index)"><i class="glyphicon glyphicon-trash"></i></button>
 						</div>
 					</div>
 				</div>
