--- a/catlogging-web/src/main/webapp/ng/wizards/source/compoundLog.html
+++ b/catlogging-web/src/main/webapp/ng/wizards/source/compoundLog.html
@@ -128,7 +128,7 @@ catloggingNgApp.controllerProvider.register(
 								<option value="" ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.all'">- {{localeMessage}} -</option>
 							</select>
 							<div class="input-group-btn">
-								<button class="btn btn-default" type="button" ng-click="deleteInstance($index)"
+								<button class="btn btn-default btn-sm" type="button" ng-click="deleteInstance($index)"
 									title="Delete this log instance"><i class="glyphicon glyphicon-trash"></i></button>
 							</div>
 						</div>
