--- a/catlogging-web/src/main/webapp/ng/entry/viewerFieldsConfig.html
+++ b/catlogging-web/src/main/webapp/ng/entry/viewerFieldsConfig.html
@@ -14,8 +14,8 @@
 
 </div>
 <div class="modal-footer">
-	<button class="btn btn-primary" ng-click="apply()">Apply</button>
-	<button ng-if="!viewerFields" type="button" class="btn btn-success" ng-click="enableConfig()">Enable fields configuration</button>
-	<button ng-if="viewerFields" type="button" class="btn btn-default" ng-click="disableConfig()" ng-disabled="isDefault">Reset to defaults</button>
-	<button class="btn btn-default" ng-click="cancel()">Cancel</button>
+	<button class="btn btn-primary btn-sm" ng-click="apply()">Apply</button>
+	<button ng-if="!viewerFields" type="button" class="btn btn-success btn-sm" ng-click="enableConfig()">Enable fields configuration</button>
+	<button ng-if="viewerFields" type="button" class="btn btn-default btn-sm" ng-click="disableConfig()" ng-disabled="isDefault">Reset to defaults</button>
+	<button class="btn btn-default btn-sm" ng-click="cancel()">Cancel</button>
 </div>
