--- a/catlogging-web/src/main/webapp/ng/entry/zoomEntry.html
+++ b/catlogging-web/src/main/webapp/ng/entry/zoomEntry.html
@@ -26,7 +26,7 @@
 <div class="modal-footer">
 	<span class="slide-animate" ng-if="bottomBarButtonsTpl" ng-include="bottomBarButtonsTpl"></span>
 	<span ng-if="entryViewerLink" class="btn-group" style="text-align:left" uib-dropdown>
-      <button id="single-button" type="button" class="btn btn-default" uib-dropdown-toggle
+      <button id="single-button" type="button" class="btn btn-default btn-sm" uib-dropdown-toggle
       	title="Link referencing current log entry for
 			bookmarking or for sharring with others">
         <i class="fa fa-link"></i> Permalink <span class="caret"></span>
@@ -36,5 +36,5 @@
         <li role="menuitem"><a href="{{entryViewerLink}}" target="_blank"><i class="fa fa-external-link"></i> Open log entry link in new window</a></li>
       </ul>
     </span>
-	<button class="btn btn-primary" ng-click="close()">Close</button>
+	<button class="btn btn-primary btn-sm" ng-click="close()">Close</button>
 </div>
