--- a/catlogging-web/src/main/webapp/ng/reports/addWidgetWizard.html
+++ b/catlogging-web/src/main/webapp/ng/reports/addWidgetWizard.html
@@ -29,6 +29,6 @@
 	 </form>
 </div>
 <div class="modal-footer">
-     <button class="btn btn-primary" ng-click="ok()" ng-disabled="addForm.$invalid">OK</button>
-     <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+     <button class="btn btn-primary btn-sm" ng-click="ok()" ng-disabled="addForm.$invalid">OK</button>
+     <button class="btn btn-warning btn-sm" ng-click="cancel()">Cancel</button>
 </div>
