--- a/catlogging-web/src/main/webapp/ng/sniffer/statusReposition.html
+++ b/catlogging-web/src/main/webapp/ng/sniffer/statusReposition.html
@@ -13,5 +13,5 @@
 	</lsf-busy-container>
 </div>
 <div class="modal-footer">
-	<button class="btn btn-primary" ng-click="close()">Close</button>
+	<button class="btn btn-primary btn-sm" ng-click="close()">Close</button>
 </div>
