--- a/catlogging-web/src/main/webapp/ng/system/settings/elastic/main.html
+++ b/catlogging-web/src/main/webapp/ng/system/settings/elastic/main.html
@@ -50,7 +50,7 @@
 						<div class="input-group">
 							<input type="number" ng-model="a.port" required="required" class="form-control" placeholder="Port">
 							<div class="input-group-btn">
-								<button class="btn btn-default" type="button" ng-click="deleteNode($index)"><i class="glyphicon glyphicon-trash"></i></button>
+								<button class="btn btn-default btn-sm" type="button" ng-click="deleteNode($index)"><i class="glyphicon glyphicon-trash"></i></button>
 							</div>
 						</div>
 					</div>
@@ -63,7 +63,7 @@
 
 	<div class="row">
 		<div class="col-md-12">
-			<button type="button" class="btn btn-primary" ng-disabled="form.$invalid" ng-click="saveEsSettings()">save</button>
+			<button type="button" class="btn btn-primary btn-sm" ng-disabled="form.$invalid" ng-click="saveEsSettings()">save</button>
 		</div>
 	</div>
 </form>
