--- a/catlogging-web/src/main/webapp/ng/util/modelEditor.html
+++ b/catlogging-web/src/main/webapp/ng/util/modelEditor.html
@@ -14,6 +14,6 @@
 	</div>
 </div>
 <div class="modal-footer">
-	<button class="btn btn-primary" ng-click="apply()" ng-disabled="modelForm.$invalid">Apply</button>
-	<button class="btn btn-default" ng-click="cancel()">Cancel</button>
+	<button class="btn btn-primary btn-sm" ng-click="apply()" ng-disabled="modelForm.$invalid">Apply</button>
+	<button class="btn btn-default btn-sm" ng-click="cancel()">Cancel</button>
 </div>
