--- a/catlogging-web/src/main/webapp/ng/system/about.html
+++ b/catlogging-web/src/main/webapp/ng/system/about.html
@@ -6,7 +6,7 @@
 	<p>
 		Version: {{version}}
 	</p>
-	<p class="lead">catlogging is a sophisticated web tool for parsing, viewing, monitoring and analyzing log data - smarter, collaborative and easier.</p>
+	<p class="lead">catlogging makes it easy to view logs.</p>
 
 	<div ng-include="contextPath+'/snippets/system/contactsShareTeaser.html'"></div>
 
