--- a/catlogging-core/src/main/resources/META-INF/resources/snippets/system/contactsShareTeaser.html
+++ b/catlogging-core/src/main/resources/META-INF/resources/snippets/system/contactsShareTeaser.html
@@ -1,22 +1,16 @@
-<p>
-  We appreciate your feedback and are committed to listening to our users and building the most compelling log web tool we can.
-  If you have any suggestions, bug reports or annoyances please report them to our <a href="https://github.com/catlogging/catlogging/issues" target="_blank">issue tracker</a>.
-</p>
-<p>
-You are also highly encouraged to participate in the development at GitHub. To contribute to the project in some way, please post links
-to our homepage or just talk about catlogging. Also, join us and help to promote catlogging on:
+<p ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.form.about.text.2'" ng-bind-html="sanitizeLocalMessage()"></p>
 
 <div class="row">
 	<div class="col-xs-1">GitHub:</div> 
 	<div class="col-xs-11">
 <!-- Place this tag where you want the button to render. -->
-<a class="github-button" href="https://github.com/catlogging/catlogging" data-count-href="/catlogging/catlogging/stargazers" data-count-api="/repos/catlogging/catlogging#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star catlogging/catlogging on GitHub">Star</a>
+<a class="github-button" href="https://github.com/leesang-pack/CatLogging" data-count-href="/leesang-pack/CatLogging/stargazers" data-count-api="/repos/leesang-pack/CatLogging#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star leesang-pack/CatLogging on GitHub">Star</a>
 
 <!-- Place this tag where you want the button to render. -->
-<a class="github-button" href="https://github.com/catlogging" data-count-href="/catlogging/followers" data-count-api="/users/catlogging#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @catlogging on GitHub">Follow @catlogging</a>
+<a class="github-button" href="https://github.com/leesang-pack" data-count-href="/CatLogging/followers" data-count-api="/users/CatLogging#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @catlogging on GitHub">Follow @catlogging</a>
 
 <!-- Place this tag where you want the button to render. -->
-  <a class="github-button" href="https://github.com/catlogging/catlogging/issues" data-count-api="/repos/catlogging/catlogging#open_issues_count" data-count-aria-label="# issues on GitHub" aria-label="Issue catlogging/catlogging on GitHub">Issues</a>
+  <a class="github-button" href="https://github.com/leesang-pack/CatLogging/issues" data-count-api="/repos/leesang-pack/CatLogging#open_issues_count" data-count-aria-label="# issues on GitHub" aria-label="Issue leesang-pack/CatLogging on GitHub">Issues</a>
   
 <!-- Place this tag right after the last button or just before your close body tag. -->
 <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
@@ -26,10 +20,10 @@ to our homepage or just talk about catlogging. Also, join us and help to promote
 <div class="row">
 	<div class="col-xs-1">Twitter:</div>
 	<div class="col-xs-11">
-<a href="https://twitter.com/catlogging" class="twitter-follow-button" data-show-count="false">Follow @catlogging</a>
+<a href="https://twitter.com/xzpluszone" class="twitter-follow-button" data-show-count="false">Follow @xzpluszone</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
-<a href="https://twitter.com/intent/tweet?screen_name=catlogging" class="twitter-mention-button" data-related="catlogging">Tweet to @catlogging</a>
+<a href="https://twitter.com/intent/tweet?screen_name=xzpluszone" class="twitter-mention-button" data-related="xzpluszone">Tweet to @xzpluszone</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 	</div>
 </div>
