--- a/catlogging-web/src/main/webapp/ng/system/settings/general/main.html
+++ b/catlogging-web/src/main/webapp/ng/system/settings/general/main.html
@@ -4,12 +4,12 @@
 	<div class="row">
 		<div class="col-md-12">
 		<div class="form-group">
-			<lsf-info-label label="Home directory:">The home directory is configured by the system property <code>-Dcatlogging.home</code> passed to the VM
+			<lsf-info-label-key label-key="catlogging.common.form.HomeDir" label=":">The home directory is configured by the system property <code>-Dcatlogging.home</code> passed to the VM
 				process when catlogging is started. To change the default setting <code>${user.home}/catlogging</code> just add the property
 				to the start process e.g. <code>java -jar catlogging.war -Dcatlogging.home=/opt/catlogging</code>.<br>
 				<b>Note:</b> Changing the home directory causes loss of persisted data (like events, log configuration etc.) unless the content
 				of the old home directory is transfered to new location.  
-			</lsf-info-label>
+			</lsf-info-label-key>
 			<input type="text" ng-model="settings.homeDir" readonly="readonly" class="form-control">
 		</div></div>
 	</div>
@@ -17,12 +17,12 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="form-group">
-				<lsf-info-label label="Validation String Path:">
+				<lsf-info-label-key label-key="catlogging.common.form.ValidationPath" label=":">
 					The Validation String directory is configured by the system property <code>-Dcatlogging.validationPath</code> passed to the VM
 					process when logsniffer is started. To change the default setting <code>${user.home}/catlogging</code> just add the property
 					to the start process e.g. <code>java -jar catlogging.war -Dcatlogging.validationPath=/blar/blar</code>.<br>
 					<b>Note:</b> Verifies the string path required when using 'File path pattern:'. This string must be included. The default is '/'.
-				</lsf-info-label>
+				</lsf-info-label-key>
 				<input type="text" ng-model="settings.validationPath" readonly="readonly" class="form-control">
 			</div></div>
 	</div>
@@ -30,9 +30,9 @@
 	<div class="row">
 		<div class="col-md-12">
 			<lsf-form-group class="form-group required" field-name="baseUrl" field-path="baseUrl" bind-errors="bindErrors">
-				<lsf-info-label label="Base URL:">Specify the HTTP address of the catlogging installation, such as http://yourhost.yourdomain/catlogging/. This value is used to let catlogging know how to refer to itself, ie. to
+				<lsf-info-label-key label-key="catlogging.common.form.baseUrl" label=":">Specify the HTTP address of the catlogging installation, such as http://yourhost.yourdomain/catlogging/. This value is used to let catlogging know how to refer to itself, ie. to
 					to create links in emails etc. for referencing events and other resources.
-				</lsf-info-label>
+				</lsf-info-label-key>
 				<input type="text" ng-model="settings.baseUrl" name="baseUrl" id="baseUrl" class="form-control" required>
 			</lsf-form-group>
 		</div>
@@ -40,8 +40,8 @@
 	<div class="row">
 		<div class="col-md-12">
 			<lsf-form-group class="form-group" field-name="systemUpdateCheckEnabled" field-path="systemUpdateCheckEnabled" bind-errors="bindErrors">
-				<lsf-info-label label="System updates check:">If enabled catlogging will check anonymously on a daily basis for new versions and notify in case of upgrades.
-				</lsf-info-label>
+				<lsf-info-label-key label-key="catlogging.common.form.SystemUpdateChk" label=":">If enabled catlogging will check anonymously on a daily basis for new versions and notify in case of upgrades.
+				</lsf-info-label-key>
 				<div class="checkbox">
 					<label>
 						<input type="checkbox" ng-model="settings.systemUpdateCheckEnabled" name="systemUpdateCheckEnabled" id="systemUpdateCheckEnabled">
@@ -53,18 +53,18 @@
 	</div>
 	
 	<div class="well well-sm">
-		<h4>Mail settings</h4>
+		<h4><text ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.form.mailSetting'">{{localeMessage}}</text></h4>
 		<div class="row">
 			<div class="col-md-6">
 				<div class="form-group required" ng-class="{'has-error': form.mailHost.$invalid || bindErrors['mailSettings.host']}">
-					<label for="mailHost" class="control-label">SMTP host:</label>
+					<label for="mailHost" class="control-label" ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.form.host'">SMTP {{localeMessage}}:</label>
 					<input type="text" ng-model="settings.mailSettings.host" name="mailHost" id="mailHost" class="form-control" required>
 					<div class="help-block" ng-if="bindErrors['mailSettings.host']">{{bindErrors['mailSettings.host']}}</div>
 				</div>
 			</div>
 			<div class="col-md-6">
 				<div class="form-group required" ng-class="{'has-error': form.mailPort.$invalid || bindErrors['mailSettings.port']}">
-					<label for="mailPort" class="control-label">SMTP port:</label>
+					<label for="mailPort" class="control-label" ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.form.port'">SMTP {{localeMessage}}:</label>
 					<input type="number" ng-model="settings.mailSettings.port" name="mailPort" id="mailPort" class="form-control" required>
 					<div class="help-block" ng-if="bindErrors['mailSettings.port']">{{bindErrors['mailSettings.port']}}</div>
 				</div>
@@ -73,14 +73,14 @@
 		<div class="row">
 			<div class="col-md-6">
 				<div class="form-group" ng-class="{'has-error': form.mailUser.$invalid || bindErrors['mailSettings.user']}">
-					<label for="mailHost" class="control-label">Username:</label>
+					<label for="mailHost" class="control-label" ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.form.username'">{{localeMessage}}:</label>
 					<input type="text" ng-model="settings.mailSettings.user" name="mailUser" id="mailUser" class="form-control">
 					<div class="help-block" ng-if="bindErrors['mailSettings.user']">{{bindErrors['mailSettings.user']}}</div>
 				</div>
 			</div>
 			<div class="col-md-6">
 				<div class="form-group" ng-class="{'has-error': form.mailPassword.$invalid || bindErrors['mailSettings.password']}">
-					<label for="mailPort" class="control-label">Password:</label>
+					<label for="mailPort" class="control-label" ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.form.password'">{{localeMessage}}:</label>
 					<input type="password" ng-model="settings.mailSettings.password" name="mailPassword" id="mailPassword" class="form-control">
 					<div class="help-block" ng-if="bindErrors['mailSettings.password']">{{bindErrors['mailSettings.password']}}</div>
 				</div>
@@ -89,23 +89,23 @@
 	</div>
 
 	<div class="well well-sm">
-		<h4>HTTP proxy settings</h4>
+		<h4>HTTP <text ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.form.proxySetting'">{{localeMessage}}</text></h4>
 		<div class="checkbox">
 			<label for="httpProxyEnabled" class="control-label">
-				<input type="checkbox" id="httpProxyEnabled" ng-model="state.httpProxyEnabled" ng-click="settings.httpProxy = null"> HTTP proxy enabled
+				<input type="checkbox" id="httpProxyEnabled" ng-model="state.httpProxyEnabled" ng-click="settings.httpProxy = null"> HTTP <text ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.form.proxyEnable'">{{localeMessage}}</text>
 			</label>
 		</div>
 		<div class="row" ng-if="state.httpProxyEnabled">
 			<div class="col-md-6">
 				<div class="form-group required" ng-class="{'has-error': form.httpProxyHost.$invalid || bindErrors['httpProxy.host']}">
-					<label for="httpProxyHost" class="control-label">Host:</label>
+					<label for="httpProxyHost" class="control-label" ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.form.host'">{{localeMessage}}:</label>
 					<input type="text" ng-model="settings.httpProxy.host" name="httpProxyHost" id="httpProxyHost" class="form-control" required>
 					<div class="help-block" ng-if="bindErrors['httpProxy.host']">{{bindErrors['httpProxy.host']}}</div>
 				</div>
 			</div>
 			<div class="col-md-6">
 				<div class="form-group required" ng-class="{'has-error': form.httpProxyPort.$invalid || bindErrors['httpProxy.port']}">
-					<label for="httpProxyPort" class="control-label">Port:</label>
+					<label for="httpProxyPort" class="control-label" ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.form.port'">{{localeMessage}}:</label>
 					<input type="number" ng-model="settings.httpProxy.port" name="httpProxyPort" id="httpProxyPort" class="form-control" required>
 					<div class="help-block" ng-if="bindErrors['httpProxy.port']">{{bindErrors['httpProxy.port']}}</div>
 				</div>
@@ -114,14 +114,14 @@
 		<div class="row" ng-if="state.httpProxyEnabled">
 			<div class="col-md-6">
 				<div class="form-group" ng-class="{'has-error': form.httpProxyUser.$invalid || bindErrors['httpProxy.user']}">
-					<label for="httpProxyUser" class="control-label">Username:</label>
+					<label for="httpProxyUser" class="control-label" ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.form.username'">{{localeMessage}}:</label>
 					<input type="text" ng-model="settings.httpProxy.user" name="httpProxyUser" id="httpProxyUser" class="form-control">
 					<div class="help-block" ng-if="bindErrors['httpProxy.user']">{{bindErrors['httpProxy.user']}}</div>
 				</div>
 			</div>
 			<div class="col-md-6">
 				<div class="form-group" ng-class="{'has-error': form.httpProxyPassword.$invalid || bindErrors['mailSettings.password']}">
-					<label for="httpProxyPassword" class="control-label">Password:</label>
+					<label for="httpProxyPassword" class="control-label" ng-controller="LocaleMessageController" ng-init="localeMessageKey='catlogging.common.form.password'">{{localeMessage}}:</label>
 					<input type="password" ng-model="settings.httpProxy.password" name="httpProxyPassword" id="httpProxyPassword" class="form-control">
 					<div class="help-block" ng-if="bindErrors['httpProxy.password']">{{bindErrors['httpProxy.password']}}</div>
 				</div>
