--- a/src/main/resources/static/th/login/loginForm5.html
+++ b/src/main/resources/static/th/login/loginForm5.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="utf-8">
-	<title>Input From catlogging</title>
+	<title th:text="#{catlogging.bt.login} + ' | catlogging'"></title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 	<!-- Tell the browser to be responsive to screen width -->
@@ -37,7 +37,7 @@
 						</div>
 
 						<div class="col-lg-12 loginbttm">
-							<div class="col-lg-6 login-btm login-text">
+							<div class="col-lg-8 login-btm login-text">
 								<!-- Error Message -->
 								<div th:if="${param.error}">
 									<span th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']} != null and ${session['SPRING_SECURITY_LAST_EXCEPTION'].message} != null" >
@@ -46,8 +46,8 @@
 									<div th:text="${@thymeleafUtil.removeSessionLastSecurityException()}"></div>
 								</div>
 							</div>
-							<div class="col-lg-6 login-btm login-button">
-								<button type="button" class="btn btn-outline-primary" th:onclick="'location.href=\'' + @{/member/new} + '\';'" th:utext="#{catlogging.bt.login.signup}"></button>
+							<div class="col-lg-4 login-btm login-button">
+<!--								<button type="button" class="btn btn-outline-primary" th:onclick="'location.href=\'' + @{/member/new} + '\';'" th:utext="#{catlogging.bt.login.signup}"></button>-->
 								<button class="btn btn-outline-primary" type="submit" th:utext="#{catlogging.bt.login}"></button>
 							</div>
 						</div>
